# hello-world-pkg

./: README.md  justfile  pyproject.toml  pytest.xml
.github/actions/setup/: action.yml
.github/workflows/: check.yml  publish-to-test-pypi.yml  run-tests.yml  style.yml
src/hello_package_ewan/base/: base.py
src/hello_package_ewan/math/: operations.py
src/hello_package_ewan/str/: operations.py
src/helloworld/base/: base.py
src/helloworld/math/: operations.py
src/helloworld/str/: operations.py
tasks/: check.just
tests/: test_math.py  test_str.py
