[project]
name = "hello_package_ewan"
version = "0.0.6"
authors = [
  { name="Ewan Byrne", email="21emb10@queensu.ca" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]