[project]
name = "helloworld"
version = "0.0.6"
authors = [
  { name="Ewan Byrne", email="21emb10@queensu.ca" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

# DEPENDENCIES

[dependency-groups]
check = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]
